--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.36"
     kapt "com.google.dagger:hilt-compiler:2.36"
 
+    // Picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
     // Testing
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
